# BE

./: db.sqlite3  pyproject.toml  pytest.ini
BE/: settings.py  urls.py
reviews/: models.py  permissions.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_review_genre.py  0003_remove_review_date_remove_review_points_and_more.py  0004_alter_review_genre.py  0005_alter_review_content_alter_review_date_concert_and_more.py  0006_alter_review_id.py  0007_alter_review_date_concert.py  0008_alter_review_date_concert_alter_review_rating.py
tests/: test_models.py  test_urls.py
